# Long-Context-Code-Bench

./: .gitignore  BACKUP_CONTENTS.txt  BENCHMARK_ANALYSIS_REPORT.md  CHANGELOG.md  COMMIT_MESSAGE.txt  CONTRIBUTING.md  DEPLOYMENT.md  DISTRIBUTION.md  DUPLICATE_FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  LICENSE  LICENSE-DOCS  QUICK_START.md  README.md  REFACTOR_COMPLETE.md  REFACTOR_PLAN_REMOVE_H2H.md  REFACTOR_STATUS.md  TEST_RESULTS.md  UPGRADE_GUIDE.md  WEB_APP_TEST_REPORT.md  add_ground_truth_patches.py  plan.md  prd.md  pyproject.toml
.github/workflows/: benchmark.yml
cloudflare-deploy_20251106_144714/: README.md  _headers  charts.js  comparison.html  cross-agent.html  cross-agent.js  data-loader.js  index.html  index.json  styles.css  summary.html  task.html
cloudflare-deploy_20251106_144714/cross_agent_analysis/: pr114854_8428e5d5.json  pr114857_1b4d7aa1.json  pr114860_514f6866.json  pr114863_5ece988b.json  pr114866_041de3b2.json  pr114869_74f18a42.json  pr114869_75a175ed.json  pr114872_2b312b29.json  pr114875_2c42b4d5.json  pr114878_78b1cb09.json  pr114881_77d4bf39.json  pr114884_2c8a558d.json  pr114887_aff6d9ab.json  pr114890_18958d12.json  pr114896_96e93bce.json  pr114899_907b1de9.json  pr114905_44a9d6ff.json  pr114908_4b0de065.json  pr114911_0bf2e216.json  pr114914_f4eb631e.json  pr114917_db74bba1.json  pr114920_128524d4.json  pr114923_e00b01cc.json  pr114929_c2aa3faf.json  pr114932_694c4528.json  pr114935_bec55f5f.json  pr114938_5923b8c1.json  pr114944_0eee6163.json  pr114950_29695f87.json  pr114953_9cb4bdc4.json  pr114959_fd782310.json  pr114965_ad16079e.json  pr114971_7a13de90.json  pr114974_68dd3b75.json  pr114977_2a4a352c.json  pr114980_125a3b2e.json  pr114983_c6dfaa47.json  pr114986_b6c5626f.json  pr114989_78856f2e.json  pr114992_80a67a32.json  (+1 more)
cloudflare-deploy_20251106_144714/samples/v0/elastic_elasticsearch_pr114854/: sample.json
cloudflare-deploy_20251106_144714/samples/v0/elastic_elasticsearch_pr114881/: sample.json
cloudflare-deploy_20251106_144714/samples/v0/elastic_elasticsearch_pr114887/: sample.json
cloudflare-deploy_20251106_144714/samples/v0/elastic_elasticsearch_pr114899/: sample.json
cloudflare-deploy_20251106_144714/samples/v0/elastic_elasticsearch_pr114905/: sample.json
cloudflare-deploy_20251106_144714/samples/v0/elastic_elasticsearch_pr114911/: sample.json
cloudflare-deploy_20251106_144714/samples/v0/elastic_elasticsearch_pr114914/: sample.json
cloudflare-deploy_20251106_144714/samples/v0/elastic_elasticsearch_pr114917/: sample.json
cloudflare-deploy_20251106_144714/samples/v0/elastic_elasticsearch_pr114923/: sample.json
cloudflare-deploy_20251106_144714/samples/v0/elastic_elasticsearch_pr114932/: sample.json
cloudflare-deploy_20251106_144714/samples/v0/elastic_elasticsearch_pr114938/: sample.json
cloudflare-deploy_20251106_144714/samples/v0/elastic_elasticsearch_pr114944/: sample.json
cloudflare-deploy_20251106_144714/samples/v0/elastic_elasticsearch_pr114959/: sample.json
cloudflare-deploy_20251106_144714/samples/v0/elastic_elasticsearch_pr114971/: sample.json
cloudflare-deploy_20251106_144714/summaries/074538b9_factory_claude-sonnet-4-5-20250929/: summary.csv  summary.json
cloudflare-deploy_20251106_144714/summaries/a9463435_auggie_sonnet4.5/: summary.json
cloudflare-deploy_20251106_144714/summaries/c7a3f90a_claude-code_claude-sonnet-4-5/: summary.json
config/: judge_models.json
data/: README.md  elasticsearch_prs_100_prompt_dataset.json  elasticsearch_prs_100_v1.json  elasticsearch_prs_50.json  elasticsearch_prs_50_original.json
docs/: PROMPT_SYNTHESIS.md  RUNNERS.md  v1.md
docs/rfcs/: 0001-enterprise-standard-for-ai-coding-agents.md
examples/: run_full_dataset.sh  run_single_pr.sh  run_v0.sh
long_context_bench/: __init__.py  cli.py  models.py  pipeline.py  ranking.py  stats.py  synthesis.py
long_context_bench/runners/: __init__.py  aider.py  asciinema_utils.py  auggie.py  base.py  claude_code.py  codex.py  factory.py  generic.py  stream_utils.py
long_context_bench/stages/: __init__.py  cross_agent_analysis.py  edit.py  head_to_head.py  judge.py  sample.py
long_context_bench/web/: README.md  app.js  charts.js  comparison.html  cross-agent.html  cross-agent.js  data-loader.js  index.html  package.json  playwright.config.ts  server.js  styles.css  summary.html  task.html  task.js
long_context_bench/web/tests/: head_to_head.spec.ts
output-glm-comparison/: GLM_MCP_Analysis_Report.md  README.md  edits  index.json  judges  summaries
output-glm-comparison/web/: BUILD_INFO.txt  DEPLOYMENT.md  data-loader.js  index.html  index.json
scripts/: analyze_agent_performance.py  analyze_v0_results.py  archive_full_output.sh  backup_benchmark_data.py  bias_analysis.py  build-cloudflare.py  case_study_analysis.py  complete_h2h_removal.sh  detailed_pattern_analysis.py  finish-opus-run.sh  fix_duplicate_h2h.py  fix_mcp_summary.py  generate_auggie_summary.py  generate_metadata.py  make_v0_valid_from_known_issues.py  monitor_head_to_head.sh  package_cloudflare.sh  package_results.sh  preflight_check.py  regenerate_head_to_head.sh  rejudge_head_to_head_v0.py  run_v0_test.sh  test_web_app.sh  view_prompts.sh
src/long_context_bench/: __init__.py  cli.py  config.py  editor.py  judge.py  models.py  pipeline.py  sampler.py  schemas.py  utils.py
src/long_context_bench/runners/: __init__.py  auggie.py  base.py
tests/: __init__.py  test_cross_agent_analysis.py  test_dataset.py  test_head_to_head_parsing.py  test_judge.py  test_models.py  test_pipeline.py  test_ranking.py  test_schemas.py  test_stream_utils.py  test_utils.py
web/: app.js  data-loader.js  index.html  index.json  package.json  server.js  styles.css
(+2412 files in other folders)
